--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
             color: #fff;
             margin: 6px;
             display: flex;
-            width: 1469px;
         }
         .sidebar_1 {
-            width: 340px;
-            height: 150px;
+            width: 250px;
             background-color: #111111;
         }
         .sidebar_1 i{
@@ -38,7 +36,7 @@
             border-radius: 18px;
         }
         .sidebar_2{
-            width: 340px;
+            width: 250px;
             height: 550px;
             background-color: #111111;
             position: relative;
@@ -68,10 +66,14 @@
             color: #fff;
             transition: .44s;
         }
+        .content_1{
+            padding-left: 20px;
+        }
         .content_1 .des {
+            margin-left: 15px;
             float: right;
             position: relative;
-            right: 198px;
+            right: 60px;
         }
         .contents{
             margin-top: 20px;
@@ -83,14 +85,14 @@
             color: #b0b0b0;
             font-size: 15px;
         }
-        .content_2 {
-            position: relative;
-            top: 15px;
+        
+        .content_2{
+            padding-left: 20px;
         }
         .content_2 .des {
             float: right;
             position: relative;
-            right: 212px;
+            right: 90px;
         }
         .content_2 span {
             position: relative;
@@ -111,7 +113,6 @@
         }
         .main_content {
             background-color: #1c1b1b;
-            width: 100%;
             height: auto;
             border: 1px solid #111111;
             border-radius: 12px;
@@ -172,9 +173,9 @@
         .pop p:hover{
             text-decoration: underline;
         }
-        .pop h5 {
+        .pop span {
             position: relative;
-            left: 1020px;
+            right: -900px;
             top: 22px;
             color: #3d3d3d;
         }
@@ -251,7 +252,7 @@
     <div class="sidebarr">
         <div class="sidebar_1">
             <img src="Spotify logo.png" alt="logo">
-            <a href="#"><p><i class='bx bxs-home'></i>Home</p></a>
+            <a href="index.html"><p><i class='bx bxs-home'></i>Home</p></a>
             <a href="#"><p><i class='bx bx-search' ></i>Search</p></a>
         </div>
         <div class="sidebar_2">
@@ -261,11 +262,11 @@
              <div class="contents">
                 <div class="content_1">
                     <img src="ABOOGIE.jpeg" width="50px" height="50px" alt="moody">
-                <p class="des">Moody Mix<br><span>Spotify</span></p>
+                    <b class="des">Moody Mix<br><span>Spotify</span></b>
                 </div>
                 <div class="content_2">
                     <img src="Roddy Ricch (Rapper) - Please Excuse Me for Being Antisocial [Album Cover] _ One Eye Symbolism.jpeg" width="50px" height="50px" alt="moody">
-                <p class="des">Pop Mix<br><span>Spotify</span></p>
+                    <p class="des">Pop Mix<br><span>Spotify</span></p>
                 </div>
                 
              </div>
@@ -286,7 +287,7 @@
         </header>
         <div class="pop">
             <p>Popular Artists</p>
-            <h5>Show all</h5>
+            <span>Show all</span>
         </div>
         <div class="artists">
             <div class="first_artist">
@@ -316,8 +317,8 @@
         <div class="albums">
             <div class="first_album">
                 <a href="#"><img src="black sheriff_album.jpg" width="160px" height="155px"></a>
-                <div class="al_name">
-                    <p>The Villian I Never <br>Was <br><span>Black Sherif</span></p>
+                <div class="al_name" style="font-size: 15px;">
+                    <p>The Villian I Never Was <br><span>Black Sherif</span></p>
                 </div>
             </div>
             <div class="first_album">
